Bug 501025 - Downloading online stock quotes from yahoo.com on a weekend does not provide any values
Summary: Downloading online stock quotes from yahoo.com on a weekend does not provide ...
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online quotes widget (other bugs)
Version First Reported In: 8.1.92
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-03 21:35 UTC by Ralf Habacker
Modified: 2025-03-04 14:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2025-03-03 21:35:10 UTC
STEPS TO REPRODUCE
1.  open  https://query2.finance.yahoo.com/v8/finance/chart/MSTR?events=history&includeAdjustedClose=true&period1=1740870000&period2=1740956399&interval=1d in a browser
2. inspect data

OBSERVED RESULT
In the URL mentioned, “Sat Mar 01 2025 23:00:00 GMT+0000” is used as the start date and “Sun Mar 02 2025 22:59:59 GMT+0000” as the end date, but the json data returned does not contain any data.

EXPECTED RESULT
In this case, the last available data should be returned.
Comment 1 Bug Janitor Service 2025-03-03 21:50:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/office/alkimia/-/merge_requests/56
Comment 2 Ralf Habacker 2025-03-04 14:46:53 UTC
Git commit e910fe7cb0bc38da79ddeb8de1bdc57519806ead by Ralf Habacker.
Committed on 04/03/2025 at 14:46.
Pushed by habacker into branch 'master'.

Avoid not receiving data at the weekend

FIXED-IN:8.2

A  +105  -0    autotests/alkonlinequoteprivatetest-2.json
M  +50   -0    autotests/alkonlinequoteprivatetest.cpp
M  +1    -0    autotests/alkonlinequoteprivatetest.h
M  +1    -0    autotests/alkonlinequoteprivatetest.qrc
M  +1    -0    src/alkonlinequote.h
M  +75   -72   src/alkonlinequote_p.cpp
M  +19   -0    src/alkonlinequote_p.h

https://invent.kde.org/office/alkimia/-/commit/e910fe7cb0bc38da79ddeb8de1bdc57519806ead