Avoid not receiving data at the weekend

BUG:501025

FIXED-IN:8.2